Fixed stretched images.

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
 /* Global Styles */
 
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 header {
   background-color: #55868c;
 }
